--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -24,6 +24,10 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
  </div>
+ <div class="field">
+  <%= f.label :weight %>
+  <%= f.text_field :weight %>
+ </div>
   <div class="actions">
     <%= f.submit %>
   </div>
